large refactor: object in client, cron db upate, mailing, both repeat

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -23,5 +23,5 @@
     </div>
 
     <div class="container">
-          <router-outlet>Skomponuj własny system powtórek języka angielskiego</router-outlet>
+          <router-outlet>{{authmsg}}</router-outlet>
     </div>
