--- a/client/app/admin/admin.component.html
+++ b/client/app/admin/admin.component.html
@@ -1,18 +1,16 @@
-
 <div class="container">
 
-  <hr>
   <h3>ENG</h3>
 <div class="form-group">
   <label class="control-label" for="inputLarge">Po angielsku</label>
-  <input class="form-control input-lg" type="text" id="engPhrase" [(ngModel)]="engPhrase">
+  <input class="form-control input-lg" type="text" [(ngModel)]="currRepeat.engPhrase">
   <label class="control-label" for="inputLarge">Po polsku</label>
-  <input class="form-control input-lg" type="text" id="plPhrase" [(ngModel)]="plPhrase">
+  <input class="form-control input-lg" type="text" id="plPhrase" [(ngModel)]="currRepeat.plPhrase">
   <label class="control-label" for="inputLarge">Dodatkowy opis</label>
-  <input class="form-control input-lg" type="text" id="description" [(ngModel)]="description">
+  <input class="form-control input-lg" type="text" id="description" [(ngModel)]="currRepeat.description">
 <input type="date" [(ngModel)]="nextRepeat" id="nextRepeat"/>
 
-   <button type="submit" class="btn btn-primary" (click)="addItem()">Zastosuj</button>
+   <button type="submit" class="btn btn-primary" (click)="addRepeat()">Zastosuj</button>
 </div>
 
 </div>
@@ -31,18 +29,20 @@
   </thead>
   <tbody>
       
-      <tr *ngFor="let item of items; let i = index">
+      <tr *ngFor="let r of repeatArr; let i = index">
         <!--  <li *ngFor="let item of items">-->
       <td>{{i+1}}</td>
-      <td>{{item.engPhrase}}</td>
-      <td>{{item.plPhrase}}</td>
-     <td>{{item.description}}</td>
-      <td>{{item.nextRepeat}}</td>
+      <td contenteditable>{{r.engPhrase}}</td>
+      <td contenteditable>{{r.engAnsCount}}</td>
+      <td contenteditable>{{r.plPhrase}}</td>
+      <td contenteditable>{{r.plAnsCount}}</td>
+      <td contenteditable>{{r.description}}</td>
+      <td contenteditable>{{r.nextRepeat}}</td>
      <!-- <td><input type="datetime-local" [(ngModel)]="item.nextRepeat" value={{item.nextRepeat}} /></td>-->
-      <td><button class="btn btn-success" (click) = "editItem(item)">Edytuj</button></td>
-      <td><button class="btn btn-success" (click) = "removeItem(item._id)">Usuń</button></td>
+      <td><button class="btn btn-success" (click) = "editRepeat(r)">Edytuj</button></td>
+      <td><button class="btn btn-success" (click) = "removeRepeat(r)">Usuń</button></td>
        <!-- </li>-->
     </tr>
       </tbody>
+    <button class="btn btn-success" (click) = "saveAllChanges()">Zapisz zmiany</button>
 </table> 
-
